unload classloader class