@@ -9,12 +9,11 @@ import java.util.concurrent.locks.LockSupport;
  * User: johnny.ly
  * Date: 2017/1/15
  * Time: 14:57
- * Desc:
+ * Desc: -XX:+TraceClassLoading -XX:+TraceClassUnloading -XX:+PrintGCDetails -XX:+PrintGCTimeStamps
  *      1. 如果实现了finalize方法(方法体非空!!!)，在对象初始化时会生成一个Finalizer(调用Finalizer.register)对象，
  *      在gc时会被gc线程放到Finalizer的queue(此时Finalizer强引用待回收的对象，只有执行完对象的finialize方法才能被回收)，最后导致不能被一次gc回收，
  *      FinalizerThread 负责从queue中remove，并调用对象finialize方法，FinalizerThread优先级比较低，可能经过多次gc还没有执行finialize方法，容易引发fullGC
  *      2. class对象和classLoader对象互相引用，必须同时被回收。Class unload的条件确实是三个，已验证
- *      3.
  */
 public class ClassLoaderReCycleTest {
 
@@ -31,7 +30,7 @@ public class ClassLoaderReCycleTest {
         //LockSupport.parkNanos(10000000000L);
         System.out.println("wake up...");
         classLoader = null;
-        //klass=null;
+        klass=null;
         System.gc();
         LockSupport.parkNanos(10000000000L);
         System.gc();
